Updated controller source and example.

--- a/lib/yuidoc/template/classmap.tmpl
+++ b/lib/yuidoc/template/classmap.tmpl
@@ -1,4 +1,4 @@
-YAHOO.env.classMap = {"$.ui.controller": "controller", "ui.SandBox": "controller", "ui.Class": "controller", "ui.BaseController": "controller", "wt.controller.LogMyRow": "table-controller"};
+YAHOO.env.classMap = ${pkgmap};
 
 YAHOO.env.resolveClass = function(className) {
     var a=className.split('.'), ns=YAHOO.env.classMap;
