--- a/css/demo.css
+++ b/css/demo.css
@@ -13,6 +13,57 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
     font-weight: normal;
 }
 
-#mk-header-title{
-	padding: 0.3em;
+#mk-header-title {
+    padding: 0.3em;
+}
+
+#mk-switcher {
+    position: absolute;
+    top: 0.5em;
+    right: 1em;
+}
+
+.ui-tabs-close {
+    display: none;
+    position: absolute;
+    top: 3px;
+    right: 0px;
+    z-index: 800;
+    width: 16px;
+    height: 14px;
+    font-size: 10px;
+    font-style: normal;
+    cursor: pointer;
+}
+
+.ui-tabs-selected .ui-tabs-close {
+    display: block;
+}
+
+/* ui-controller-demo-simple */
+.ui-controller-demo-simple {
+    width: 50%;
+    margin: auto;
+}
+
+.ui-controller-demo-simple .ui-widget-header{
+	position: relative;
+}
+
+.ui-controller-demo-simple .ui-widget-header h2 {
+    padding: 0.2em;
+}
+
+.ui-controller-demo-simple .ui-widget-header button {
+    position: absolute;
+    right: 2em;
+    top: 0.4em;
+}
+
+.ui-controller-demo-simple ol {
+    list-style: none;
+}
+
+.ui-controller-demo-simple ol li {
+    padding: 1em;
 }
