--- a/css/demo.css
+++ b/css/demo.css
@@ -15,6 +15,9 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
 
 #mk-header-title {
     padding: 0.3em;
+	font-style:italic;
+	font-weight:bolder;
+	letter-spacing:0.1em;
 }
 
 #mk-switcher {
