--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,67 +1,39 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-    <title>GitHub Pages - {{ page.title }}</title>
-    <link href="http://github.com/stylesheets/bundle_common.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="http://github.com/stylesheets/bundle_github.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="/stylesheets/screen.css" media="screen" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <div id="main">
-      <div id="header" class="basic">
-
-        <div class="site">
-          <div class="logo">
-            <a href="/"><img src="http://github.com/images/modules/header/logo_pages.png" alt="github pages" /></a>
-          </div>
-          <div class="actions">
-            <a href="http://github.com">home</a>
-            <a href="http://github.com/login">login</a>
-            <a href="http://github.com/signup">signup!</a>
-          </div>
+    <head>
+        <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+        <title>GitHub Pages - {{ page.title }}</title>
+        <link rel='stylesheet' type='text/css' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/pepper-grinder/jquery-ui.css' />
+        <link rel="stylesheet" type="text/css" href='../css/ui.jqgrid.css' />
+        <link rel='stylesheet' type='text/css' href='../css/demo.css' />
+        <link rel='stylesheet' type='text/css' href='../css/api.css' />
+        <link type="text/css" rel="stylesheet" media="screen" href="../css/github/bundle_github.css">
+    </head>
+    <body>
+        <div id="doc3" class="yui-t2 ui-widget ui-widget-content">
+            <div class="ui-layout-north">
+                <h1 id="mk-header-title" class="ui-widget-header"><a href="./index.html"><img alt="github pages" src="http://github.com/images/modules/header/logo_pages.png" width="104" height="30"></a><span class="mk-header-title-sub">jQuery UI Controller - Api - <em>$moduletitle</em></span><span class="subtitle">$version</span></h1>
+                <div id="mk-switcher">
+                </div>
+            </div>
+            <div id="hd">
+                <div id="path">
+                    <b><a href="./" title="jQuery UI Controller">jQuery UI Controller</a></b>
+                    / {{ page.title }}
+                </div>
+                <form onsubmit="return false">
+                    <div id="propertysearch" class="ui-state-highlight ui-corner-all">
+                        Search: 
+                        <input autocomplete="off" id="searchinput" />
+                        <div id="searchresults">
+                            &nbsp;
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div id="bd" class="ui-widget-content">
+            	{{ content }}	
+            </div>
         </div>
-      </div>
-
-      <div id="content" class="site">
-
-        {{ content }}
-
-      </div>
-
-      <div class="push"></div>
-    </div>
-
-    <div id="footer">
-      <div class="site">
-
-        <div class="info">
-          <div class="links">
-            <a href="http://github.com/blog/148-github-shirts-now-available">T-Shirts</a> |
-            <a href="http://github.com/blog">Blog</a> |
-            <a href="http://support.github.com/">Support</a> |
-            <a href="http://github.com/training">Git Training</a> |
-            <a href="http://github.com/contact">Contact</a> |
-            <a href="http://groups.google.com/group/github/">Google Group</a> |
-            <a href="http://github.wordpress.com">Status</a>
-          </div>
-          <div class="company">
-            GitHub is <a href="http://logicalawesome.com/">Logical Awesome</a> &copy;2009 | <a href="http://github.com/site/terms">Terms of Service</a> | <a href="http://github.com/site/privacy">Privacy Policy</a>
-          </div>
-        </div>
-        <div class="sponsor">
-          <div>
-            Powered by the <a href="http://www.rackspace.com ">Dedicated
-            Servers</a> and<br/> <a href="http://www.rackspacecloud.com">Cloud
-            Computing</a> of Rackspace Hosting<span>&reg;</span>
-          </div>
-          <a href="http://www.rackspace.com">
-            <img src="http://github.com/images/modules/footer/rackspace_logo.png" alt="Dedicated Server" />
-          </a>
-        </div>
-      </div>
-    </div>
-  </body>
+    </body>
 </html>
