--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,35 +5,42 @@
         <title>GitHub Pages - {{ page.title }}</title>
         <link rel='stylesheet' type='text/css' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/pepper-grinder/jquery-ui.css' />
         <link rel="stylesheet" type="text/css" href='../css/ui.jqgrid.css' />
-        <link rel='stylesheet' type='text/css' href='../css/demo.css' />
-        <link rel='stylesheet' type='text/css' href='../css/api.css' />
+        <link rel="stylesheet" type="text/css" href='../css/ui.jqgrid.css' />
+		<link rel='stylesheet' type='text/css' href='../css/demo.css' />
         <link type="text/css" rel="stylesheet" media="screen" href="../css/github/bundle_github.css">
     </head>
     <body>
-        <div id="doc3" class="yui-t2 ui-widget ui-widget-content">
-            <div class="ui-layout-north">
-                <h1 id="mk-header-title" class="ui-widget-header"><a href="./index.html"><img alt="github pages" src="http://github.com/images/modules/header/logo_pages.png" width="104" height="30"></a><span class="mk-header-title-sub">jQuery UI Controller - Api - <em>$moduletitle</em></span><span class="subtitle">$version</span></h1>
-                <div id="mk-switcher">
+        <body class="ui-controller-demo-layout-init ui-widget ui-widget-content">
+			
+		<div class="ui-layout-north">
+			<h1 id="mk-header-title" class="ui-widget-header">jQuery UI Controller</h1>
+			<div id="mk-switcher"></div>
+		</div>
+		
+		<div class="ui-layout-west ui-widget ui-widget-content">
+            <table id="mk-west-grid"></table>
+		</div>
+		
+		<div class="ui-layout-center ui-controller-layout-init ">
+			<div id="mk-tabs">
+                <ul>
+                    <li>
+                        <a href="#mk-tabs-1">Home</a>
+                    </li>
+                </ul>
+                <div id="mk-tabs-1">
+	                {{ content }}
                 </div>
             </div>
-            <div id="hd">
-                <div id="path">
-                    <b><a href="./" title="jQuery UI Controller">jQuery UI Controller</a></b>
-                    / {{ page.title }}
-                </div>
-                <form onsubmit="return false">
-                    <div id="propertysearch" class="ui-state-highlight ui-corner-all">
-                        Search: 
-                        <input autocomplete="off" id="searchinput" />
-                        <div id="searchresults">
-                            &nbsp;
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div id="bd" class="ui-widget-content">
-            	{{ content }}	
-            </div>
-        </div>
+		</div>
+		
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script>
+		<script type="text/javascript" src="../js/external/jquery.jqGrid.js"></script>
+		<script type="text/javascript" src="../js/external/jquery.layout.js"></script>
+		<script type="text/javascript" src="../js/external/jquery.themeswitcher.js"></script>
+		<script type="text/javascript" src="../js/external/jquery.livequery.js"></script>
+		<script type="text/javascript" src="../js/src/ui.controller.js"></script>
+		<script type="text/javascript" src="../js/src/bootstrap.js"></script>
     </body>
 </html>
