Updated default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,10 @@
         <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
         <title>GitHub Pages - {{ page.title }}</title>
         <link rel='stylesheet' type='text/css' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/pepper-grinder/jquery-ui.css' />
-        <link rel="stylesheet" type="text/css" href='../css/ui.jqgrid.css' />
-        <link rel="stylesheet" type="text/css" href='../css/ui.jqgrid.css' />
+        <link rel="stylesheet" type="text/css" href='./css/ui.jqgrid.css' />
+        <link rel="stylesheet" type="text/css" href='./css/ui.jqgrid.css' />
 		<link rel='stylesheet' type='text/css' href='../css/demo.css' />
-        <link type="text/css" rel="stylesheet" media="screen" href="../css/github/bundle_github.css">
+        <link type="text/css" rel="stylesheet" media="screen" href="./css/github/bundle_github.css">
     </head>
     <body>
         <body class="ui-controller-demo-layout-init ui-widget ui-widget-content">
@@ -36,11 +36,11 @@
 		
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script>
-		<script type="text/javascript" src="../js/external/jquery.jqGrid.js"></script>
-		<script type="text/javascript" src="../js/external/jquery.layout.js"></script>
-		<script type="text/javascript" src="../js/external/jquery.themeswitcher.js"></script>
-		<script type="text/javascript" src="../js/external/jquery.livequery.js"></script>
-		<script type="text/javascript" src="../js/src/ui.controller.js"></script>
-		<script type="text/javascript" src="../js/src/bootstrap.js"></script>
+		<script type="text/javascript" src="./js/external/jquery.jqGrid.js"></script>
+		<script type="text/javascript" src="./js/external/jquery.layout.js"></script>
+		<script type="text/javascript" src="./js/external/jquery.themeswitcher.js"></script>
+		<script type="text/javascript" src="./js/external/jquery.livequery.js"></script>
+		<script type="text/javascript" src="./js/src/ui.controller.js"></script>
+		<script type="text/javascript" src="./js/src/bootstrap.js"></script>
     </body>
 </html>
