Updated default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
         <link rel='stylesheet' type='text/css' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/pepper-grinder/jquery-ui.css' />
         <link rel="stylesheet" type="text/css" href='./css/ui.jqgrid.css' />
         <link rel="stylesheet" type="text/css" href='./css/ui.jqgrid.css' />
-		<link rel='stylesheet' type='text/css' href='../css/demo.css' />
+		<link rel='stylesheet' type='text/css' href='./css/demo.css' />
         <link type="text/css" rel="stylesheet" media="screen" href="./css/github/bundle_github.css">
     </head>
     <body>
