--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,9 @@
                     </li>
                 </ul>
                 <div id="mk-tabs-1">
-	                {{ content }}
+                	<div id="mk-main-content">
+	                	{{ content }}
+					</div>
                 </div>
             </div>
 		</div>
