--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,13 @@
         <body class="ui-controller-demo-layout-init ui-widget ui-widget-content">
 			
 		<div class="ui-layout-north">
-			<h1 id="mk-header-title" class="ui-widget-header">jQuery UI Controller</h1>
+			<h1 id="mk-header-title" class="ui-widget-header">
+				<a href="./">
+					<img alt="github pages" src="http://github.com/images/modules/header/logo_pages.png" width="104" height="30"></a>
+					<span class="mk-header-title-sub">
+						jQuery UI Controller
+					</span>
+			</h1>
 			<div id="mk-switcher"></div>
 		</div>
 		
