Updated default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,11 @@
 		<div class="ui-layout-north">
 			<h1 id="mk-header-title" class="ui-widget-header">
 				<a href="./">
-					<img alt="github pages" src="http://github.com/images/modules/header/logo_pages.png" width="104" height="30"></a>
-					<span class="mk-header-title-sub">
-						jQuery UI Controller
-					</span>
+					<img alt="github pages" src="http://github.com/images/modules/header/logo_pages.png" width="104" height="30">
+				</a>
+				<span class="mk-header-title-sub">
+					jQuery UI Controller
+				</span>
 			</h1>
 			<div id="mk-switcher"></div>
 		</div>
