--- a/css/demo.css
+++ b/css/demo.css
@@ -18,6 +18,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
 }
 
 #mk-header-title {
+	position: relative;
     padding: 0.3em;
     font-style: italic;
     font-weight: bolder;
