Updated default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 		</div>
 		
 		<div class="ui-layout-west ui-widget ui-widget-content">
-            <table id="mk-west-grid"></table>
+            <!--table id="mk-west-grid"></table-->
 		</div>
 		
 		<div class="ui-layout-center ui-controller-layout-init ">
