Updated default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         <link type="text/css" rel="stylesheet" media="screen" href="./css/github/bundle_github.css">
     </head>
     <body>
-        <body id="doc3" class="ui-controller-demo-layout-init ui-widget ui-widget-content">
+        <body id="doc3" class="ui-controller-layout-init ui-widget ui-widget-content">
 			
 		<div class="ui-layout-north">
 			<h1 id="mk-header-title" class="ui-widget-header">
@@ -25,7 +25,7 @@
 		</div>
 		
 		<div class="ui-layout-west ui-widget ui-widget-content">
-            <!--table id="mk-west-grid"></table-->
+            <table id="mk-west-grid"></table>
 		</div>
 		
 		<div class="ui-layout-center ui-controller-layout-init ">
