--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
         <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-        <title>GitHub Pages - {{ page.title }}</title>
+        <title>jQuery UI Controller - {{ page.title }}</title>
         <link rel='stylesheet' type='text/css' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/pepper-grinder/jquery-ui.css' />
         <link rel="stylesheet" type="text/css" href='./css/ui.jqgrid.css' />
         <link rel="stylesheet" type="text/css" href='./css/ui.jqgrid.css' />
@@ -28,7 +28,7 @@
             <table id="mk-west-grid"></table>
 		</div>
 		
-		<div class="ui-layout-center ui-controller-layout-init ">
+		<div class="ui-layout-center ui-controller-layout-init" style="overflow: auto;">
 			<div id="mk-tabs">
                 <ul>
                     <li>
