--- a/css/demo.css
+++ b/css/demo.css
@@ -26,9 +26,11 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
 }
 
 #mk-header-title .mk-header-title-sub {
-    bottom: 1em;
+    top: 0.6em;
     left: 120px;
     position: absolute;
+	font-size: 0.7em;
+	font-style: normal;
 }
 
 #mk-switcher {
