--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,20 +16,19 @@
             function initialize(){
                 var feed = new google.feeds.Feed("http://dansledoutereboot.wordpress.com/feed/");
                 feed.load(function(result){
+					var container = $("#feed");
 					console.log("load result", this, arguments);
                     if (!result.error) {
 						
-						$.each(result.feed.entries, function(i, val){
-							console.log("feed:", i, val);
+						$.each(result.feed.entries, function(i, entry){
+							console.log("feed:", i, entry);
+                            var div = $("<div />");
+							var title = $("<h1 />").text(entry.title);
+							var content = $("<div />").html(entry.content);
+							
+							div.append(title).append(content).appendTo(container);
+							
 						});
-						
-                        var container = document.getElementById("feed");
-                        for (var i = 0; i < result.feed.entries.length; i++) {
-                            var entry = result.feed.entries[i];
-                            var div = document.createElement("div");
-                            div.appendChild(document.createTextNode(entry.title));
-                            container.appendChild(div);
-                        }
                     }
                 });
             }
