--- a/js/src/index/layout/tree.xml
+++ b/js/src/index/layout/tree.xml
@@ -9,4 +9,5 @@
 	<row><cell>3</cell><cell>Tests</cell><cell>/jquery-ui-controller/tests/</cell><cell>0</cell><cell><![CDATA["NULL"]]></cell><cell>true</cell><cell>false</cell></row>
 	<row><cell>4</cell><cell>Source</cell><cell>http://github.com/MkLabs/jquery-ui-controller/</cell><cell>0</cell><cell><![CDATA["NULL"]]></cell><cell>true</cell><cell>false</cell></row>
 	<row><cell>5</cell><cell>Wiki</cell><cell>http://wiki.github.com/MkLabs/jquery-ui-controller/</cell><cell>0</cell><cell><![CDATA["NULL"]]></cell><cell>true</cell><cell>false</cell></row>
+	<row><cell>6</cell><cell>Blog</cell><cell>/jquery-ui-controller/blog/</cell><cell>0</cell><cell><![CDATA["NULL"]]></cell><cell>true</cell><cell>false</cell></row>
 </rows>
