Test google feed api

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
                             {{ content }}
                         </div>
                     </div>
-					<div id="mk-tabs-blog" class="ui-helper-hidden">
+					<div id="mk-tabs-blog" class="wikistyle">
 						
 					</div>
                 </div>
